--- a/params.yaml
+++ b/params.yaml
@@ -1,5 +1,5 @@
 # A reasonable number to start with
-num_particles: 200
+num_particles: 800
 
 # The number of lidar beams emitted from
 # each particle. This doesn't need to be
@@ -22,6 +22,6 @@ odom_topic: "/odom"
 particle_filter_frame: "/base_link_pf"
 
 # Deterministic flag; set to true to remove all added noise
-deterministic: true
+deterministic: false
 
 lidar_scale_to_map_scale: 1.0
